@@ -13,6 +13,9 @@ What's New in astroid 3.3.5?
 ============================
 Release date: TBA
 
+* Control setting local nodes outside of the supposed local's constructor.
+
+  Closes pylint-dev/astroid/issues/1490
 
 
 What's New in astroid 3.3.4?
